<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <ImageButton
            android:id="@+id/bus_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/white"
            tools:srcCompat="@drawable/ques"
            android:contentDescription="@string/question" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp">

        <ImageButton
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                app:srcCompat="@drawable/cal"
                android:background="@color/white"
                android:id="@+id/bus_calendar"
                android:contentDescription="@string/get_bus_calendar" />


        <Button
                android:id="@+id/today_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/today"
                android:textColor="@color/black"
                android:layout_marginEnd="15dp" />

        <Button
                android:id="@+id/tomorrow_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/tomorrow"
                android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

        <LinearLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal">

            <TextView
                    android:id="@+id/button_from"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dubki"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:padding="5dp"/>

            <TextView
                    android:id="@+id/pointer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/pointer"
                    android:textSize="40sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:contentDescription="@string/string_pointer" />

            <TextView
                    android:id="@+id/button_to"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/odincovo"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:padding="5dp" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
            <ImageButton
                    android:id="@+id/button_from_dubki_to_odincovo"
                    app:srcCompat="@drawable/right_pointer"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:contentDescription="@string/button_from_dubki_to_odincovo" />
            <ImageButton
                    app:srcCompat="@drawable/left_pointer"
                    android:id="@+id/button_from_odincovo_to_dubki"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:contentDescription="@string/button_from_odincovo_to_dubki" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bus_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" />

</LinearLayout>